--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -15,6 +15,7 @@
 \usepackage{graphicx}
 \usepackage{array}
 \usepackage{eqnarray,amsmath}
+\usepackage{wrapfig}
 
 \title{There and back again: a retrosynthesis tale}
 \date{April 1, 2019}	
@@ -66,22 +67,22 @@ The advent of deep learning\cite{ChenDrugDiscovery} gave a new impulse for virtu
 To synthesize a molecule, one should have a plan of a multi-step synthesis and also a set of available reactants. 
 Finding an optimal combination of reactants, reactions, and conditions to obtain the compound with good yield, sufficient quality, and quantity is not a trivial task even for experts in organic chemistry. Recent advances in the computer-aided synthesis planning are reviewed in \cite{ColeyReview,EnkvinstReview}. 
 
-The retrosynthetic analysis worked out by E.\,J.~Corey \cite{Corey} tries to account for all factors while deriving the synthetic route. It iteratively decomposes the molecule on simpler blocks till all of them become available either by purchase or by synthesis described in the literature. At each step, fig. \ref{fig:example}, all possible disconnections (rules) with known reactions simplify the target molecule bringing to the scene less complex compounds. Some of them may be already available, while the others undergo the next step of retrosynthesis decomposition. Due to the recursive nature of the procedure, it can deal with thousands of putative compounds so computational retrosynthetic approaches can greatly help chemists in finding the best routes. Managing of the database of such rules is complicated and more critical the models based on it are not ready to accommodate new reactions and will always be outdated. Almost more than 60 years of developing rule-based systems ended with no remarkable success in synthesis planning programs. Another approach to tackle the problem is to use so-called template-free methods inspired by the success of machine-translation. They don't require the database of templates and rules due to an inherent possibility to derive this information during training directly from a database of organic reactions with clearly designated roles of reactants, products, reagents, and conditions.
+The retrosynthetic analysis worked out by E.\,J.~Corey \cite{Corey} tries to account for all factors while deriving the synthetic route. It iteratively decomposes the molecule on simpler blocks till all of them become available either by purchase or by synthesis described in the literature. At each step, fig. \ref{fig:example-reaction}, all possible disconnections (rules) with known reactions simplify the target molecule bringing to the scene less complex compounds. Some of them may be already available, while the others undergo the next step of retrosynthesis decomposition. Due to the recursive nature of the procedure, it can deal with thousands of putative compounds so computational retrosynthetic approaches can greatly help chemists in finding the best routes. Managing of the database of such rules is complicated and more critical the models based on it are not ready to accommodate new reactions and will always be outdated. Almost more than 60 years of developing rule-based systems ended with no remarkable success in synthesis planning programs. Another approach to tackle the problem is to use so-called template-free methods inspired by the success of machine-translation. They don't require the database of templates and rules due to an inherent possibility to derive this information during training directly from a database of organic reactions with clearly designated roles of reactants, products, reagents, and conditions.
 
 The analogy between machine translation and retrosynthesis is evident: each target molecule has 
 its predecessors from which it can be synthesized as every meaningful sentence one can translate 
 from source language to target one. If all parts of a reaction are written in SMILES notation, 
 then our source and target sentence are composed of valid SMILES tokens as words. 
-The main goal of the work is to build a model which could for a given target molecule for example\footnote{
+The main goal of the work is to build a model which could for a given target molecule for our example\footnote{
 This reaction is in the test set and it was correctly predicted  by our model. 
-Probability landscapes in the following figures are drawn from this example.} COC(=O)c1cccc(-c2nc3cccnc3[nH]2)c1 in fig. \ref{fig:example}
+Probability landscapes in the following figures are drawn from this example.} COC(=O)c1cccc(-c2nc3cccnc3[nH]2)c1 in fig. \ref{fig:example-reaction}
 correctly predict the set of reactants. Namely, it should predict Nc1cccnc1N.COC(=O)c1cccc(C(=O)O)c1 in this case.
 
 \begin{figure}
   \centering
   \includegraphics[scale=0.87]{images/example-reaction.pdf}
   \caption{An example of a retrosynthetic reaction: on the left side of the arrow the target molecule is depicted, and on the right side the one possible set of reactants that can lead to the target is shown in common chemistry-like scheme and using SMILES notation. Here two successive amidation reactions result in cyclisation and aromatization.}
-  \label{fig:example}
+  \label{fig:example-reaction}
 \end{figure}
 
 Neural sequence-to-sequence (seq2seq) approach has been recently applied for a direct reaction 
@@ -136,7 +137,7 @@ Our final vocabulary has length of 66 symbols\footnote{This vocabulary derived f
 \end{quote}
 
 To convert a token to a dense vector we used a trainable embedding
-\footnote{The encoder and the decoder use their own embeddings in this study.} of size 64. 
+\footnote{The encoder and the decoder share embeddings in this study.} of size 64. 
 It is well known that training neural networks in batches is more stable, faster, and leads to more accurate models. 
 To facilitate batch training we also used masks of input strings of shape (batch\_size, max\_length) 
 with elements equal to 1 for those positions where are valid SMILES symbols and 0 everywhere else. 
@@ -157,7 +158,7 @@ z_i = Transformer( \{x_1, x_2, x_3, ..., x_L\}, \{y_1, y_2, y_3, ..., y_{i-1} \}
 \end{equation}
 Here $x_i$ is the input of the models at $i$ position; $L$ -- the length of the input string; $y_i$ is the decoded output of the model up to position $(i-1)$; and $z_i$ -- logits that are to be converted to probabilities:
 \begin{equation}
-\label{eq:t}
+\label{eq:tempdep}
 q_i = {{exp(z_i /T) }\over {\sum_{j=0}^{V} exp(z_j /T) }}
 \end{equation}
 where $V$ is the size of the vocabulary (66 in this work) and $T$ stands for the temperature\footnote{Similar to formula of Boltzmann (Gibbs) distribution used in statistical mechanics.} usually assigned to 1.0 in standard softmax layers. With higher $T$ the landscape of the probability distribution becomes more smooth. During the training the model adapts its weights to better predict $q_i$, so $y_i = q_i$. 
@@ -186,7 +187,7 @@ where $factor$ is just a constant. Big values of $factor$ introduce numerical in
 \paragraph{Averaging weights} during last steps (usually 10- 20) of training or at minima of learning rates in case of snapshop learning \cite{Snapshot}.
 
 \subsection{Knowledge distillation}
-After training a (teacher) model it is possible to get predictions for the training set and then train another (student) model on these predictions. This second model usually outperforms the first one. This approach was further developed in\cite{Hinton} where the algorithm for knowledge distillation was proposed. The key idea is to calculate probabilities for training dataset at higher temperature $T$, eq. \ref{eq:t}, and then use this values as targets along with the correct labels. The final loss function:
+After training a (teacher) model it is possible to get predictions for the training set and then train another (student) model on these predictions. This second model usually outperforms the first one. This approach was further developed in\cite{Hinton} where the algorithm for knowledge distillation was proposed. The key idea is to calculate probabilities for training dataset at higher temperature $T$, eq. \ref{eq:tempdep}, and then use this values as targets along with the correct labels. The final loss function:
 \begin{equation}
 \label{eq:hard}
 Loss = -\sum y log(q) - T^2 * \sum q_{teacher} log(q)  
@@ -196,7 +197,14 @@ contains terms for hard and soft labels and, thus, the model will learn to disti
 \section{Results}
 \label{sec:results}
 
-For this study, we implemented The Transformer model in Tensorflow library to support its integration in our in-house programs set (\url{https://github.com/bigchem/retrosynthesis}).  All values reported are averages for three repetitive runs. Preliminary modeling showed that the architecture with 3 layers and 8 attention works well for the datasets, though we tried combinations of 2, 6, 8, 10 layers with 6, 8, 10, 12 heads. So all calculations were performed with these values fixed.  The number of learnable parameters of the model is 1\,882\,176, embedding layer common for product and reactants has size 64.
+\begin{wrapfigure}{r}{7cm}  
+  \vspace{-0.5cm}
+  \includegraphics[width = 7cm]{images/tempdep.pdf}
+  \caption{Dependence of the beam search on temperature. For better exploration, higher temperatures are more useful. In this study we explored T=1.3. Bigger values significantly worse for Top-3, and approximately the same for Top-1 and Top-5. This curve was derived from the training dataset.}
+  \label{fig:tempdep}
+  \vspace{-0.2cm}
+\end{wrapfigure}
+For this study, we implemented The Transformer model in Tensorflow library to support its integration in our in-house programs set (\url{https://github.com/bigchem/retrosynthesis}).  All values reported are averages for three repetitive runs. Preliminary modeling showed that the architecture with 3 layers and 8 attention heads works well for the datasets, though we tried combinations of 2, 3, 4, 5 layers with 6, 8, 10, 12 heads. So all calculations were performed with these values fixed.  The number of learnable parameters of the model is 1\,882\,176, embedding layer common for product and reactants has size 64.
 \begin{table}[b!]
   \caption{Accuracy (\%) of the models on test set when all reactants were correctly predicted.}
   \centering
@@ -204,35 +212,30 @@ For this study, we implemented The Transformer model in Tensorflow library to su
     \toprule
     Model & Greedy & Top-1 & Top-3 & Top-5 & Description\\
     \midrule
-    Seq2Seq &  & 37.4  & 52.4 & 57.0 & Literature result from \cite{Pande} based on Seq2Seq architecture. \\
-    T1         & &  &  &  & Transformer Model trained with validation control set (early stopping, 200 epochs). \\
-    T$1_1$ & &  &  &  & The same as T1, but without early stopping (1000 epochs). \\ 
-    T2         & 39.3 & 41.1 & 60.5 & 66.6 & Transformer Model trained on both training and validation sets for 1000 epochs.\\
-    T$2_1$ & & 41.8 & 61.3 & 67.2 & T = 1.3 during the decoding stage of the T2 model. \\
-    T3         & &  & & & Transformer Model trained with cyclic learning rate schedule for 6000 epochs.\\
-    T$3_1$ & &   & & & T =  1.3 during the decoding stage of T3 model \\
+    Seq2Seq &  & 37.4  & 52.4 & 57.0 & Literature result from \cite{Pande} based on Seq2Seq architecture. \\ \midrule
+    T1         & 34.4 & 37.9 & 57.3 & 62.7 & Transformer Model trained with validation control set (early stopping, \textasciitilde 200 epochs). \\
+    T$1_1$ & 37.3 & 39.8 & 59.1 & 63.9 & The same as T1, but without early stopping (1000 epochs). \\ 
+    T2         & 39.3 & 41.8 & 61.3 & 67.2 & Transformer Model trained on both training and validation sets for 1000 epochs.\\
+    T3         & 40.6 & 42.7 & 63.9 & 69.8 & Transformer Model trained with cyclic learning rate schedule for 1000 epochs. Averaging cycles 6,7,8,10.\\
     T4         & &  &  &  & Transformer Model trained with distillation approach \cite{Hinton} for 1000 epochs.\\ 
-    T$4_1$ & &  &  &  & The same as T4 but decoding at T=1.3 \\
-     \bottomrule
+    \bottomrule
   \end{tabular}
   \label{tbl:results}
 \end{table}
 
 Following the standard machine learning protocol, we trained our first models (T1) using three datasets for training, validation, and external testing (8:1:1) as was done in \cite{Pande}. Learning curves for T1 are depicted in fig. \ref{fig:example}, (d) and (e) for training and validation loss, respectively, (g) shows the original learning rate schedule developed by the authors of the Transformer but with 16\,000 warmup steps. On reaching cross-entropy loss about 0.1 on the validation dataset, it stagnates without noticeable fluctuations as training loss steadily decreases. After warming up phase the learning rate begins fading and eventually after 1\,000 epochs its value reaches $2.8*10^{-5}$ inevitable causing to stop training because of too small updates. 
 
-During the decoding procedure, we explored the influence of the temperature parameter on the final quality of prediction and surprisingly found that inferring at higher temperatures gives better result then at T=1. This observation similarly repeated for all our models. Fig. \ref{fig:temperature} shows the influence of this parameter on the reactants prediction of the part of the training set. Clearly, at T=1.3 the model reaches the maximum of chemically-based accuracy. This fact one can explain that at higher temperatures the landscape of output probabilities of the model is softer letting the beam-search procedure to find more suitable ways during decoding. Of course, the temperature influences only relative distances between peaks, so it does not affect the greedy search method. 
+During the decoding procedure, we explored the influence of the temperature parameter on the final quality of prediction and surprisingly found that inferring at higher temperatures gives better result then at T=1. This observation similarly repeated for all our models. Fig. \ref{fig:tempdep} shows the influence of this parameter on the reactants prediction of the part of the training set. Clearly, at T=1.3 the model reaches the maximum of chemically-based accuracy. This fact one can explain that at higher temperatures the landscape of output probabilities of the model is softer letting the beam-search procedure to find more suitable ways during decoding. Of course, the temperature influences only relative distances between peaks, so it does not affect the greedy search method. 
 
 If we apply the early stopping technique, we should select the model around 200 epoch. Effectiveness of such a model marked $T1_1$ in table \ref{tbl:results} resulted in TOP-1 40.16\% on the test set. If we choose the last one model obtained at 1\,000 epoch, then the model $T1_2$ gives us slightly better values. In this case, we did not see any need of the validation dataset and keeping in mind that our model has almost 2 millions of parameters we decided to combine training and validation sets and train our next models on both data, e.g., without validation. The model $T2$ was trained on all data and with the same learning rate schedule as $T1$. The results obtained when applying T2 to the test set are better than for T1 set.
 
-Then we trained our model with cyclic learning rate schedule, eq. \ref{eq:rate}, fig. \ref{ref:example} (f) for better exploration of loss landscape. During training, we also saved the character-based accuracy of the model, fig. (b). This snapshot training regime \cite{Snapshot} produces a set of different weights at each minimum of learning rate. Averaging them is to some extent equivalent to a consensus of models but within one model \cite{Izmailov}. We tried different averaging regimes $T3_{2-3}$ but did not see any remarkable improvements. 
+Then we trained our model with cyclic learning rate schedule, eq. \ref{eq:rate}, fig. \ref{fig:example} (f) for better exploration of loss landscape. During training, we also saved the character-based accuracy of the model, fig. (b). This snapshot training regime \cite{Snapshot} produces a set of different weights at each minimum of learning rate. Averaging them is to some extent equivalent to a consensus of models but within one model \cite{Izmailov}. We tried different averaging regimes $T3_{2-3}$ but did not see any remarkable improvements. 
 \begin{figure}[t!]
   \centering
   \includegraphics[width = 17cm]{images/learning.pdf}
   \caption{Summary of learning curves for the Transformer model: 1) Accuracy of correctly predicted reactants in test set (a); 2) character based accuracy (b); 3) cross-entropy loss with cycling learning rate (f) for the entire dataset (c) and losses for training (d) and validation (e) sets with monotonically decreasing learning rate (g); 4) learning rate schedules as a function of epoch.}
   \label{fig:example}
 \end{figure}
-
-Our T3 model outperforms \cite{Pande} by 3.8\% with beam search and more critical by 3.0\% with the greedy search. The latter one is much faster and consequently more suitable for virtual screening campaigns. To improve the quality of this model, we applied the knowledge distillation approach. First, the soft labels were calculated using T3 model, and, second, we traing T4 model from scratch but with two terms in the objective function: one for hard and one for soft labels, eq. \ref{eq:hard}. 
 
 Our T3 model outperforms \cite{Pande} by 3.8\% with beam search and more critical by 3.0\% with the greedy search. The latter one is much faster and consequently more suitable for virtual screening campaigns. To improve the quality of this model, we applied the knowledge distillation approach. First, the soft labels were calculated using T3 model, and, second, we traing T4 model from scratch but with two terms in the objective function: one for hard and one for soft labels, eq. \ref{eq:hard}. 
 
@@ -262,12 +265,12 @@ The authors thank NVIDIA Corporation for donating Quadro P6000 and Titan Xp grap
  
  \newpage
  
-\section*{Appendix}
+\section{Appendix}
 
 In this section we report all characteristics of repetitive runs of all models built in this study. Average values based on this data are summed in table \ref{tbl:results}. For every run we report learning curves with loss functions and learning rate, then model relevant information are collected in a table including greedy search decoding accuracies, beam search accuracies for Top-1, Top-3, and Top-5.
 
-\subsection{T1 model} 
-\subsubsection{Model 1 (run-100)}
+\subsection{Model 1} 
+\subsubsection{Model 1 (run-1)}
   
 \begin{figure}[h!]
   \centering
@@ -315,7 +318,7 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \newpage
 
-\subsubsection{Model 1 (run-101)}
+\subsubsection{Model 1 (run-2)}
   
 \begin{figure}[h!]
   \centering
@@ -361,7 +364,7 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \newpage
 
-\subsubsection{Model 1 (run-102)}
+\subsubsection{Model 1 (run-3)}
   
 \begin{figure}[h!]
   \centering
@@ -391,11 +394,11 @@ In this section we report all characteristics of repetitive runs of all models b
     Beam, T = 1.0 (last) & & 40.05 & 59.35 &  64.27 \\
     Beam, T = 1.3 (last) & & 40.41 & 60.49 &  64.85 \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &  &  &   \\
-    \textbf{Beam, T = 1.3 (last 10 average)} & &  &  &   \\ 
+    Beam, T = 1.0 (last 10 average) & & 39.96 & 59.83 & 64.46  \\
+    \textbf{Beam, T = 1.3 (last 10 average)} & & \textbf{40.41}  & \textbf{60.81} & \textbf{65.18}  \\ 
     \bottomrule
   \end{tabular}
-  \label{tbl:t12}
+  \label{tbl:t13}
 
 \end{table} 
 
@@ -406,7 +409,8 @@ In this section we report all characteristics of repetitive runs of all models b
 \url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-avg.h5}
 
 \newpage
- \subsubsection{Model 2 (run-200)}
+\subsection{Model 2}
+\subsubsection{Model 2 (run-1)}
  
 \begin{figure}[h!]
   \centering
@@ -434,7 +438,7 @@ In this section we report all characteristics of repetitive runs of all models b
     \textbf{Beam, T = 1.3 (last 10 average)} & &  \textbf{41.61} & \textbf{60.85} & \textbf{67.37} \\ 
     \bottomrule
   \end{tabular}
-  \label{tbl:t11}
+  \label{tbl:t21}
 
 \end{table} 
 
@@ -443,7 +447,7 @@ In this section we report all characteristics of repetitive runs of all models b
 \url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-1-avg.h5}
 
 \newpage
- \subsubsection{Model 2 (run-201)}
+ \subsubsection{Model 2 (run-2)}
  
 \begin{figure}[h!]
   \centering
@@ -471,7 +475,7 @@ In this section we report all characteristics of repetitive runs of all models b
     \textbf{Beam, T = 1.3 (last 10 average)} & &  \textbf{41.87} &  \textbf{61.35} &  \textbf{67.08}\\ 
     \bottomrule
   \end{tabular}
-  \label{tbl:t11}
+  \label{tbl:t22}
 
 \end{table} 
 
@@ -480,7 +484,7 @@ In this section we report all characteristics of repetitive runs of all models b
 \url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-2-avg.h5}
 
 \newpage
- \subsubsection{Model 2 (run-202)}
+ \subsubsection{Model 2 (run-3)}
  
 \begin{figure}[h!]
   \centering
@@ -508,7 +512,7 @@ In this section we report all characteristics of repetitive runs of all models b
     \textbf{Beam, T = 1.3 (last 10 average)} & & \textbf{42.02}  & \textbf{61.73}  & \textbf{67.19} \\ 
     \bottomrule
   \end{tabular}
-  \label{tbl:t11}
+  \label{tbl:t23}
 
 \end{table} 
 
@@ -517,7 +521,10 @@ In this section we report all characteristics of repetitive runs of all models b
 \url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-3-avg.h5}
  
  \newpage
- \subsubsection{Model 3 (run-3)}
+
+ \subsection{Model 3}
+ 
+ \subsubsection{Model 3 (run-1)}
  
 \begin{figure}[h!]
   \centering
@@ -533,21 +540,125 @@ In this section we report all characteristics of repetitive runs of all models b
     \toprule
     Parameter & Value & Top-1 & Top-3 & Top-5 \\
     \midrule
-    Last training loss & 0.05712 & & & \\
+    Last training loss & 0.05173 & & & \\
     \midrule
-    Greedy search (last, epoch 1000) & & 39.19 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & & 40.23 & & \\
+    \multicolumn{5}{l}{\textbf{Averaging 6-7-8-9-10}} \\ \midrule
+    Greedy search  & & 40.92 & & \\
+    Beam, T = 1.0  & & 42.38 & 62.77 & 69.58  \\
+    Beam, T = 1.3 & & 42.80 & \textbf{63.82} & 70.28 \\ 
     \midrule
-    Beam, T = 1.0 (last) & & 40.97 & 61.23 & 67.79  \\
-    Beam, T = 1.3 (last) & & 41.22 & 62.07 & 67.85 \\ 
-    \midrule
-    Beam, T = 1.0 (last 10 average) & & 41.61 & 62.13 &  68.01 \\
-    Beam, T = 1.3 (last 10 average) & & 42.23 & 62.87 & 68.31 \\ 
+    \multicolumn{5}{l}{Averaging 7-8-9-10} \\ \midrule
+    Greedy search  & & 40.50 & & \\
+    Beam, T = 1.0  & & 42.38 & 62.91 & 69.76  \\
+    Beam, T = 1.3 & & 42.84 & 63.62 & 70.06 \\ \midrule
+    \multicolumn{5}{l}{Averaging 8-9-10} \\ \midrule
+    Greedy search  & & 41.04 & & \\
+    Beam, T = 1.0  & &  &  &   \\
+    Beam, T = 1.3 & &  &  &  \\ \midrule
+    \multicolumn{5}{l}{Averaging 9-10} \\ \midrule
+    Greedy search  & &  & & \\
+    Beam, T = 1.0  & &  &  &   \\
+    Beam, T = 1.3 & &  &  &  \\ 
     \bottomrule
   \end{tabular}
-  \label{tbl:t11}
-
+  \label{tbl:t31}
 \end{table} 
+
+Model with weights averaging 6-7-8-9-10:
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-1.h5}
+
+\newpage
+ 
+\subsubsection{Model 3 (run-2)}
+ 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 16.5cm]{images/t3-2.pdf}
+  \caption{Learning curves and rate schedule for T3 model. Loss for training on the left, usual learning rate schedule on the right.}
+  \label{fig:t11}
+\end{figure}
+
+\begin{table}[h!]
+\caption{Parameters of T32 run.}
+  \centering
+  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \toprule
+    Parameter & Value & Top-1 & Top-3 & Top-5 \\
+    \midrule
+    Last training loss & 0.04958 & & & \\
+    \midrule
+    \multicolumn{5}{l}{\textbf{Averaging 6-7-8-9-10}} \\ \midrule
+    Greedy search  & & 40.32 & & \\
+    Beam, T = 1.0  & & 41.90 & 62.70 & 68.80  \\
+    Beam, T = 1.3 & & 42.42 & \textbf{63.61} & 69.66 \\ 
+    \midrule
+    \multicolumn{5}{l}{Averaging 7-8-9-10} \\ \midrule
+    Greedy search  & & 40.22 & & \\
+    Beam, T = 1.0  & & 41.90 & 62.72 & 69.18  \\
+    Beam, T = 1.3 & & 42.42 & 63.59 & 69.92 \\ \midrule
+    \multicolumn{5}{l}{Averaging 8-9-10} \\ \midrule
+    Greedy search  & & 40.56 & & \\
+    Beam, T = 1.0  & & 41.96 & 62.53 & 69.18  \\
+    Beam, T = 1.3 & & 42.62 & 63.14 & 69.86 \\ \midrule
+    \multicolumn{5}{l}{Averaging 9-10} \\ \midrule
+    Greedy search  & & 40.34 & & \\
+    Beam, T = 1.0  & & 41.98 & 62.43 & 69.14  \\
+    Beam, T = 1.3 & & 42.34 & 63.03 & 69.70 \\ 
+    \bottomrule
+  \end{tabular}
+  \label{tbl:t32}
+\end{table} 
+
+Model with weights averaging 6-7-8-9-10:
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-2.h5}
+\newpage
+
+
+\subsubsection{Model 3 (run-3)}
+ 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 16.5cm]{images/t3-3.pdf}
+  \caption{Learning curves and rate schedule for T3 model. Loss for training on the left, usual learning rate schedule on the right.}
+  \label{fig:t11}
+\end{figure}
+
+\begin{table}[h!]
+\caption{Parameters of T33 run.}
+  \centering
+  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \toprule
+    Parameter & Value & Top-1 & Top-3 & Top-5 \\
+    \midrule
+    Last training loss & 0.05491 & & & \\
+    \midrule
+    \multicolumn{5}{l}{\textbf{Averaging 6-7-8-9-10}} \\ \midrule
+    Greedy search  & & 40.62 & & \\
+    Beam, T = 1.0  & & 42.24 & 63.25 & 69.38  \\
+    Beam, T = 1.3 & & 42.96 & \textbf{64.34} & 69.70 \\ 
+    \midrule
+    \multicolumn{5}{l}{Averaging 7-8-9-10} \\ \midrule
+    Greedy search  & & 40.42 & & \\
+    Beam, T = 1.0  & & 42.00 & 63.22 & 69.40  \\
+    Beam, T = 1.3 & & 42.76 & 64.20 & 69.80 \\ \midrule
+    \multicolumn{5}{l}{Averaging 8-9-10} \\ \midrule
+    Greedy search  & & 40.38 & & \\
+    Beam, T = 1.0  & & 41.84 & 62.96 & 69.08  \\
+    Beam, T = 1.3 & & 42.54 & 63.97 & 69.64 \\ \midrule
+    \multicolumn{5}{l}{Averaging 9-10} \\ \midrule
+    Greedy search  & & 40.20 & & \\
+    Beam, T = 1.0  & & 41.86 & 62.56 & 68.30  \\
+    Beam, T = 1.3 & & 42.62 & 63.39 & 69.12 \\ 
+    \bottomrule
+  \end{tabular}
+  \label{tbl:t33}
+\end{table} 
+
+Model with weights averaging 6-7-8-9-10:
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-3.h5}
 
 
 \end{document}
